fix jwt propagation
