# src/main/resources/users-api-contract.yml
@@ -102,6 +102,13 @@ paths:
           required: true
           schema:
             type: string
+        - name: skipSecurity
+          in: header
+          description: Esta cabecera sirve unicamente para que cuando se llame este endpoint desde el FILTRO DE SEGURIDAD, se pueda utilizar para discernir si la llamada viene desde el filtro o desde servicios de negocio
+          required: false
+          schema:
+            type: string
+            default: 'false'
       responses:
         '200':
           description: successful operation
